# mumble-web-demo

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/mumble/: CMakeLists.txt  audio.c  audio.h  audio_decoder.c  audio_decoder.h  audio_encoder.c  audio_encoder.h  buffer.c  buffer.h  common.h  frame_decoder.c  frame_decoder.h  frame_encoder.c  frame_encoder.h  mumble.c  mumble.h  mumble_client.c  mumble_client.h  ocb_aes.c  ocb_aes.h  ocb_aes_test.c  udp_ping.c  udp_ping.h  util.c  util.h  uv_ssl.c  uv_ssl.h  uv_tcp_ssl.c  uv_tcp_ssl.h  uv_udp_ssl.c  uv_udp_ssl.h
lib/mumble/codec/: celt_alpha.c  celt_alpha.h  opus.c  opus.h
lib/mumble/util/: buffer_pool.c  buffer_pool.h
src/: CMakeLists.txt  main.c
